--- a/docs/styles/general-styles.css
+++ b/docs/styles/general-styles.css
@@ -12,14 +12,17 @@
     }
 }
 
-.inner{
-    margin: auto;
-}
-
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     min-height: 100%;
+    width: fit-content;
+    min-width: 100%; /* because the content might only be a few words */
+    box-sizing: border-box;
+}
+
+.inner{
+    margin: auto;
 }
 
 .default-background{
